Remove JDK 10 call.